增加GC日志的输出内容